--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-REACT_APP_API_DEADLINES=http://localhost:3001/deadlines
-REACT_APP_API_DEADLINES_FOUR=http://localhost:3001/deadlines/four
-REACT_APP_API_NOTES=http://localhost:3001/notes
-REACT_APP_API_MEMBERS=http://localhost:3001/members
-REACT_APP_API_SERVER_STATUS=http://localhost:3001/server-status
+#REACT_APP_API_DEADLINES=http://localhost:3001/deadlines
+#REACT_APP_API_DEADLINES_FOUR=http://localhost:3001/deadlines/four
+#REACT_APP_API_NOTES=http://localhost:3001/notes
+#REACT_APP_API_MEMBERS=http://localhost:3001/members
+#REACT_APP_API_SERVER_STATUS=http://localhost:3001/server-status
 
-#REACT_APP_API_DEADLINES=http://192.168.10.58:3001/deadlines
-#REACT_APP_API_DEADLINES_FOUR=http://192.168.10.58:3001/deadlines/four
-#REACT_APP_API_NOTES=http://192.168.10.58:3001/notes
-#REACT_APP_API_MEMBERS=http://192.168.10.58:3001/members
-#REACT_APP_API_SERVER_STATUS=http://192.168.10.58/server-status
+REACT_APP_API_DEADLINES=http://192.168.10.59:3001/deadlines
+REACT_APP_API_DEADLINES_FOUR=http://192.168.10.59:3001/deadlines/four
+REACT_APP_API_NOTES=http://192.168.10.59:3001/notes
+REACT_APP_API_MEMBERS=http://192.168.10.59:3001/members
+REACT_APP_API_SERVER_STATUS=http://192.168.10.59:3001/server-status
+REACT_APP_MICROSOFT_CLIENT_ID=ebe47bad-962f-4d39-b3d8-b0af401c518a
