--- a/.env
+++ b/.env
@@ -3,10 +3,16 @@ REACT_APP_API_DEADLINES_FOUR=http://localhost:3001/deadlines/four
 REACT_APP_API_NOTES=http://localhost:3001/notes
 REACT_APP_API_MEMBERS=http://localhost:3001/members
 REACT_APP_API_SERVER_STATUS=http://localhost:3001/server-status
+REACT_APP_API_DEADLINES_ORDEREDBYDATE=http://localhost:3001/deadlines/orderedbydate
+REACT_APP_API_DEADLINES_ORDEREDBYNAME=http://localhost:3001/deadlines/orderedbyname
 
-#REACT_APP_API_DEADLINES=http://192.168.10.59:3001/deadlines
-#REACT_APP_API_DEADLINES_FOUR=http://192.168.10.59:3001/deadlines/four
-#REACT_APP_API_NOTES=http://192.168.10.59:3001/notes
-#REACT_APP_API_MEMBERS=http://192.168.10.59:3001/members
-#REACT_APP_API_SERVER_STATUS=http://192.168.10.59:3001/server-status
-#REACT_APP_MICROSOFT_CLIENT_ID=ebe47bad-962f-4d39-b3d8-b0af401c518a
+#REACT_APP_API_DEADLINES=http://192.168.2.15:3001/deadlines
+#REACT_APP_API_DEADLINES_FOUR=http://192.168.2.15:3001/deadlines/four
+#REACT_APP_API_NOTES=http://192.168.2.15:3001/notes
+#REACT_APP_API_MEMBERS=http://192.168.2.15:3001/members
+#REACT_APP_API_SERVER_STATUS=http://192.168.2.15:3001/server-status
+#REACT_APP_API_DEADLINES_ORDEREDBYDATE=http://192.168.2.15:3001/deadlines/orderedbydate
+#REACT_APP_API_DEADLINES_ORDEREDBYNAME=http://192.168.2.15:3001/deadlines/orderedbyname
+
+REACT_APP_MICROSOFT_CLIENT_ID=ebe47bad-962f-4d39-b3d8-b0af401c518a
+REACT_APP_MICROSOFT_TENANTURL=https://login.microsoftonline.com/4a955353-eccd-4e2b-8238-05bf14ba8ff9
