--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material/react-snackbar": "^0.15.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -14,13 +16,17 @@
     "@types/react-router-dom": "^5.1.5",
     "azure-devops-node-api": "^10.1.1",
     "node-sass": "^4.14.1",
+    "notistack": "^1.0.3",
+    "plotly.js": "^1.58.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-microsoft-login": "^1.10.1",
     "react-paginate": "^6.5.0",
+    "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "scripts": {
