--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.21.1",
     "azure-devops-node-api": "^10.1.1",
     "node-sass": "^4.14.1",
     "notistack": "^1.0.3",
