--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
+  "engines": {
+    "node": "12.12.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
